# guapbot

./: .env.example  .gitignore  README.md  kraken_explore.ipynb  pyproject.toml  run_tests.sh
configs/: money_printer.yaml  portfolio.yaml  sat_stacker.yaml
guapbot/: __init__.py
guapbot/backtest/: __init__.py  engine.py  report.py
guapbot/cli/: backtest_commands.py  config.py  data_commands.py  features_commands.py  main.py  model_commands.py  paper_commands.py  portfolio_commands.py
guapbot/data/: __init__.py  aggregator.py  bar_builder.py  importer.py  kraken_client.py  kraken_ws.py  manager.py  store.py
guapbot/data/social/: __init__.py  base.py
guapbot/envs/: __init__.py  trading_env.py
guapbot/execution/: __init__.py  live_trader.py  market_state.py  order_executor.py  order_manager.py  paper_trader.py  position_sizer.py
guapbot/features/: multi_timeframe.py  pipeline.py  technical.py
guapbot/models/: __init__.py  base.py  ensemble.py  ensemble_lightgbm.py  gradient_boost.py  lstm.py  mean_reversion.py  rl_agent.py  trend_following.py
guapbot/notifications/: __init__.py
guapbot/portfolio/: __init__.py  allocator.py  base_currency.py  benchmark.py  correlation.py  cross_signals.py  risk.py
guapbot/regime/: __init__.py  base.py  detector.py  rule_labeler.py  statistical.py
guapbot/utils/: __init__.py  config.py  logging.py
scripts/: backfill_trades.py  kraken_btc_1h_backfill_check.py  label_regimes.py  walk_forward.py
tests/unit/: test_backtest.py  test_data_layer.py  test_ensemble.py  test_features.py  test_foundation.py  test_models.py  test_paper_trader.py  test_portfolio.py  test_position_sizer.py  test_regime.py
