[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guapbot"
version = "0.1.0"
description = "GuapBot: Multi-strategy regime-aware crypto trading system"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "gsanc018" }]

dependencies = [
    # Exchange
    "krakenex>=2.1.0",
    "pykrakenapi>=0.3.2",
    "websocket-client>=1.7.0",

    # Data
    "pandas>=2.1.0",
    "pyarrow>=14.0.0",
    "pandas-ta>=0.3.14b",
    "numpy>=1.26.0",

    # ML / RL
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "stable-baselines3>=2.2.0",
    "sb3-contrib>=2.2.0",
    "gymnasium>=0.29.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.1.0",
    "scikit-learn>=1.3.0",

    # Social streams
    "praw>=7.7.0",
    "telethon>=1.33.0",
    "feedparser>=6.0.10",

    # LLM / Sentiment
    "anthropic>=0.20.0",

    # Storage
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.0",

    # Dashboard
    "plotly>=5.18.0",
    "dash>=2.14.0",

    # CLI
    "typer>=0.9.0",
    "rich>=13.7.0",

    # Config / Logging
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "loguru>=0.7.2",

    # HTTP
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
guapbot = "guapbot.cli.main:app"

[tool.setuptools.packages.find]
include = ["guapbot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
